# k8s-dataset-gen

./: Dockerfile  README.md  pyproject.toml
app/: collector.py  main.py
