[tool.poetry]
name = "k8s-dataset-gen"
version = "0.1.0"
description = "Prometheus Dataset Generator"
authors = ["Pratyush Nanda <precizne.void@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.48.0"
uvicorn = "0.11.2"
requests = "2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
